--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "baseUrl": "src",
+    "paths": {
+      "@utils/*": ["app/utils/*"]
+    }
   },
   "include": [
     "src/**/*.ts"
