--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,7 +7,9 @@
     "types": [],
     "baseUrl": "src",
     "paths": {
-      "@utils/*": ["app/utils/*"]
+      "@utils/*": [
+        "app/utils/*"
+      ]
     }
   },
   "include": [
